@@ -1,3 +1,9 @@
+2003-11-11  Adam D. Moss  <adam@gimp.org>
+
+	* audioconvert/ac_freq.c
+	For the first sample in a chunk to be resampled*2, use dampened
+        extrapolation instead of interpolation to somewhat reduce 'clicking'.
+
 2003-11-03  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>
 
 	* Michel Danzer's big endian patch
